--- a/index.html
+++ b/index.html
@@ -86,12 +86,7 @@
         </div>
     </section>
     <!-- changed div to footer -->
-    <footer>
-        <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
-    </footer>
+    <footer></footer>
 </body>
 
 </html>
