--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation">
-            <!-- added alt an attribute to each block of content in this section -->
+            <!-- added alt an attribute to each img in this section -->
             <img src="./assets/images/online-reputation-management.jpg" alt="Laptop viewing charted progress"/>
             <h2>Online Reputation Management</h2>
             <p>
@@ -86,6 +86,7 @@
         </div>
     </section>
     <!-- changed div to footer -->
+    <!-- removed content from footer because there was no content in the screenshot -->
     <footer></footer>
 </body>
 
